Fixed issue with logout button alignment

--- a/index.css
+++ b/index.css
@@ -88,10 +88,11 @@ section {
 
 nav {
     margin: 0.6em 0;
+    margin-left: 5px;
     width: 100%;
-    /* display: flex;
+    display: flex;
     flex-direction: row;
-    justify-content: flex-end; */
+    justify-content: flex-end;
 }
 
 /* === Structure === */
